start script & deployed Heroku - https://shrouded-tor-57632.herokuapp.com/   - TODO: drawing not synced for two computers at different location, to be investigated.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A realtime drawing app using socketIO",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel Tanner",
